all predictions endpoint